fixed overlap
corrected overlap with static-top

--- a/twitter/css/bootstrap.css
+++ b/twitter/css/bootstrap.css
@@ -3714,7 +3714,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-fixed-bottom {
   position: fixed;
   right: 0;
-  left: 0;
+  left: auto;
   z-index: 1030;
 }
 @media (min-width: 768px) {
